# Change log

## [[1.1.4]] - In development

### Added
- Adding support for blocks on the single portfolio pages.

## [[1.1.3]](https://github.com/lightspeeddevelopment/lsx-projects/releases/tag/1.1.3) - 2020-03-30

### Fixed
- Fixed issue `PHP Deprecated: dbx_post_advanced is deprecated since version 3.7.0! Use add_meta_boxes instead`.

### Security
- Updating dependencies to prevent vulnerabilities.
- General testing to ensure compatibility with latest WordPress version (5.4).
- General testing to ensure compatibility with latest LSX Theme version (2.7).


## [[1.1.2]]()

### Added
- Stopped the Project Contact form from displaying on all pages.
- Adding the .gitattributes file to remove unnecessary files from the WordPress version.


## [[1.1.1]]()

### Added
- Added compatibility with LSX Videos.
- Added compatibility with LSX Search.
- Fixed PHP warning issues.
- Fixed "lazy load images" on loading size (width).
- Fixed list item when there is not image.


## [[1.1.0]](https://github.com/lightspeeddevelopment/lsx-projects/releases/tag/v1.1.0) - 2017-10-10

### Added
 Added compatibility with LSX 2.0.
- New project structure.
- UIX copied from TO 1.1 + Fixed issue with sub tabs click (settings).

### Fixed
- Fixed scripts/styles loading order.
- Fixed small issues.


## [[1.0.5]]()

### Added
- Plugin Settings added: Disable Single and Placeholder Image.
- Excerpt length setting added.
- Dashicon icon added for CPT.
- TinyMCE shortcode button icon updated.
- Template tag added.
- Readme Updated.
- Now compatible with Homepage Control.


## [[1.0.4]]()

### Added
- Shortcode button and UI in editor.
- Metakey updates.
- Shortcode output restructured.
- Responsive and center image settings removed.


## [[1.0.5]]()

### Added
- Added more custom fields.


## [[1.0.2]]()

### Added
- Switched to Human Made version of Custom-Meta-Boxes class - https://github.com/humanmade/Custom-Meta-Boxes.


## [[1.0.1]]()

### Added