@@ -1,4 +1,4 @@
-@mixin customizer-projects-link-colour ($color: #418AD0, $hover: #F7AE00) {
+@mixin customizer-projects-link-colour($color: #418ad0, $hover: #f7ae00) {
 	&,
 	&:active,
 	&:visited {
@@ -12,7 +12,14 @@
 	}
 }
 
-@mixin customizer-projects-body-colours($bg: #F6F6F6, $breaker: #DADDDF, $color: #4A4A4A, $link: #418AD0, $hover: #F7AE00, $small: #919191) {
+@mixin customizer-projects-body-colours(
+	$bg: #f6f6f6,
+	$breaker: #dadddf,
+	$color: #4a4a4a,
+	$link: #418ad0,
+	$hover: #f7ae00,
+	$small: #919191
+) {
 	.widget.lsx-projects {
 		.lsx-projects-archive-link {
 			&:before,
@@ -27,7 +34,9 @@
 			@include customizer-projects-link-colour($small, $hover);
 		}
 
-		.entry-tabs & { border-color: $breaker; }
+		.entry-tabs & {
+			border-color: $breaker;
+		}
 
 		.lsx-projects-title > a:not(.btn) {
 			@include customizer-projects-link-colour($color, $hover);
@@ -36,11 +45,24 @@
 		.lsx-projects-content {
 			a.moretag {
 				background-color: $link;
-				color: #FFF;
+				color: #fff;
 
 				&:hover {
 					background-color: $hover;
-					color: #FFF;
+					color: #fff;
+				}
+			}
+		}
+	}
+	#primary.content-area {
+		.lsx-projects-slot {
+			.lsx-projects-content {
+				a.moretag {
+					color: #fff;
+
+					&:hover {
+						color: #fff;
+					}
 				}
 			}
 		}
@@ -50,9 +72,11 @@
 		.lsx-projects-slot {
 			.lsx-projects-content {
 				a.moretag {
-					color: #FFF !important;
+					color: #fff !important;
 
-					&:hover { color: #FFF !important; }
+					&:hover {
+						color: #fff !important;
+					}
 				}
 			}
 		}
@@ -61,9 +85,13 @@
 	#lsx-projects-slider {
 		.slick-dots {
 			& > li {
-				& > button { border-color: $color; }
+				& > button {
+					border-color: $color;
+				}
 
-				&.slick-active > button { background-color: $color; }
+				&.slick-active > button {
+					background-color: $color;
+				}
 			}
 		}
 
@@ -84,8 +112,12 @@
 	}
 
 	.single.single-project {
-		.entry-fixed-sidebar { background-color: #FFF; }
-		.tab-pane { background-color: #FFF; }
+		.entry-fixed-sidebar {
+			background-color: #fff;
+		}
+		.tab-pane {
+			background-color: #fff;
+		}
 	}
 
 	.single.single-project,
@@ -94,16 +126,20 @@
 		.nav-tabs {
 			& > li {
 				& > a {
-					background-color: #FFF;
+					background-color: #fff;
 
-					&:hover { background-color: #FFF; }
+					&:hover {
+						background-color: #fff;
+					}
 				}
 
 				&.active > a {
 					background-color: $link;
-					color: #FFF;
+					color: #fff;
 
-					&:after { border-color: transparent transparent $bg transparent; }
+					&:after {
+						border-color: transparent transparent $bg transparent;
+					}
 				}
 			}
 		}
