@@ -5,6 +5,9 @@
 ### Added
 - Adding support for blocks on the single portfolio pages.
 
+### Fixed
+- Fixed color links for the archive page.
+
 ## [[1.1.3]](https://github.com/lightspeeddevelopment/lsx-projects/releases/tag/1.1.3) - 2020-03-30
 
 ### Fixed
